# my-openenv

./: .gitignore  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  __init__.py  app.py  customer_sim.py  grader.py  realestate_cs_environment.py  tools.py
server/data/: properties.json  scenarios.json
